--- a/.env.sample
+++ b/.env.sample
@@ -14,11 +14,6 @@ DOCKER_GEN=nginx-gen
 LETS_ENCRYPT=nginx-letsencrypt
 
 #
-# Your external IP address
-#
-IP=0.0.0.0
-
-#
 # Default Network
 #
 NETWORK=webproxy
@@ -36,11 +31,6 @@ NETWORK=webproxy
 #SERVICE_NETWORK=webservices
 
 #
-# NGINX file path
-#
-NGINX_FILES_PATH=/path/to/your/nginx/data
-
-#
 # NGINX use special conf files 
 #
 # In case you want to add some special configuration to your NGINX Web Proxy you could 
@@ -52,7 +42,7 @@ NGINX_FILES_PATH=/path/to/your/nginx/data
 #           folder (./data/conf.d). If you decide to remove this special configuration
 #           you must delete your files from data folder ./data/conf.d. 
 #
-#USE_NGINX_CONF_FILES=true
+USE_NGINX_CONF_FILES=true
 
 #
 # Docker Logging Config
@@ -74,3 +64,16 @@ NGINX_FILES_PATH=/path/to/your/nginx/data
 
 #NGINX_LETSENCRYPT_LOG_MAX_SIZE=2m
 #NGINX_LETSENCRYPT_LOG_MAX_FILE=10
+
+#
+# Your external IP address
+# This value will be inserted at the end of the file
+#
+#IP=0.0.0.0
+
+#
+# NGINX file path
+# This value will be inserted at the end of the file
+#
+#NGINX_FILES_PATH=/path/to/your/nginx/data
+
